# R507

./: .pylintrc  README.md  alembic.ini  alpine.Dockerfile  app.Dockerfile  app2.Dockerfile  app3.Dockerfile  docker-compose.yaml  linter.sh  lunch.sh  notes.txt  pyproject.toml  requirements.txt  supervision.db  test.sh  test_fonctionnels.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
code/: database.py  db.py  main.py  main2.py  models.py  ordinateurs.json  supervision.db  test.py
db/: db.Dockerfile  init.sql  my.conf
db/sql/: init.sql
fastapi1_bruno/: add_ordinateur.bru  add_ordinateur2.bru  bruno.json  cpu_load-{ip}.bru  delete_ordinateur.bru  load_ordinateurs.bru  memory-{ip}.bru  ordinateurs.bru  os_release-{ip}.bru  save_ordinateurs.bru
tests/: conftest.py
tests/integration/: scenario1.py  test_api.py
tests/unit/: test_main.py
