[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Malo",email = "126970037+Malaudos35@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.123.5,<0.124.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false